<resources>
    <string name="app_name">RandomUserApp</string>
    <string name="title_home">Home</string>
    <string name="users_title">Users</string>
    <string name="load_user">Load User!</string>
    <string name="gender">Gender:</string>
    <string name="age">Age:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="back">Back</string>
    <string name="add_user">Add user…</string>
    <string name="please_wait">Please wait!</string>


</resources>