<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userPage"
    android:background="@color/purple_500"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/userPhoto"
        android:layout_width="200dp"
        android:layout_height="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/userPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Andrew Chernyshev"
        android:fontFamily="@font/rubik_bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/item_border"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintVertical_bias="0.04"
        >

        <TextView
            android:id="@+id/nameGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/gender"/>

        <TextView
            android:id="@+id/userGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/nameGender"
            app:layout_constraintStart_toEndOf="@id/nameGender"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/grey"
            tools:text="@string/gender"/>

        <TextView
            android:id="@+id/nameAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf ="@id/nameGender"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/age"/>

        <TextView
            android:id="@+id/userAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/nameAge"
            app:layout_constraintStart_toEndOf="@id/nameAge"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/grey"
            tools:text="@string/age"/>


        <TextView
            android:id="@+id/namePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf ="@id/nameAge"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/phone"/>

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/namePhone"
            app:layout_constraintStart_toEndOf="@id/namePhone"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/grey"
            tools:text="@string/phone"/>

        <TextView
            android:id="@+id/nameEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf ="@id/namePhone"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="@id/nameEmail"
            app:layout_constraintStart_toEndOf="@id/nameEmail"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/grey"
            tools:text="@string/email"/>

        <TextView
            android:id="@+id/nameAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf ="@id/nameEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/address"/>

        <TextView
            android:id="@+id/userAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/nameAddress"
            app:layout_constraintStart_toEndOf="@id/nameAddress"
            android:fontFamily="@font/rubik_bold"
            android:minLines="3"
            android:textSize="18sp"
            android:textColor="@color/grey"
            tools:text="@string/address"/>

        <ImageButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/ic_baseline_call_24"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/nameAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnEmail"
            />

        <ImageButton
            android:id="@+id/btnEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:background="@drawable/ic_baseline_email_24"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnCall"
            app:layout_constraintStart_toEndOf="@id/btnCall"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/item_border"
        android:backgroundTint="@color/purple_200"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>